# Qwen2-5-VL-Unofficial

./: CITATION.cff  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: default.yaml
scripts/: smoke_test.py
